# Pennergame-Bot

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  BUILD.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  TODO.md  docker-compose.yml  docker-start.py  gui_launcher.py  launcher.py  manage.ps1  manage.sh  pennerbot.spec  pyproject.toml  server.py
.github/workflows/: build.yml
src/: cache.py  constants.py  core.py  db.py  error_handlers.py  events.py  logging_config.py  models.py  parse.py  performance.py  query_optimizer.py  scheduler.py  security.py  tasks.py  validation.py
web/: README.md  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  serve.py  vite.config.ts
web/src/: App.css  App.tsx  STRUCTURE.md  main.tsx
web/src/components/: DashboardCard.tsx  ErrorBoundary.tsx  Sidebar.tsx  StatCard.tsx  TopBar.tsx  index.ts
web/src/hooks/: index.ts
web/src/pages/: DashboardPage.tsx  DebugPage.tsx  LoginPage.tsx  SettingsPage.tsx  StatsPage.tsx  TasksPage.tsx  index.ts
web/src/types/: index.ts
web/src/utils/: api.ts  helpers.ts
