[project]
name = "pennerbot"
version = "0.0.2"
description = "An automated bot and dashboard for Pennergame with improved architecture"
authors = [
  { name = "PennerBot Team" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
  "sqlalchemy==2.0.45",
  "beautifulsoup4==4.14.3",
  "fastapi==0.128.0",
  "uvicorn[standard]==0.40.0",
  "python-multipart==0.0.9",
  "pydantic==2.12.5",
  "APScheduler==3.10.4",
  "aiohttp==3.13.2",
  "cryptography>=41.0.0",
  "pystray>=0.19.0",
  "Pillow>=9.0.0",
  "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
  "black==25.12.0",
  "isort==5.13.2",
  "flake8==7.1.1",
  "mypy==1.19.1",
  "pre-commit==4.0.1",
  "autoflake==2.3.1",
  "bandit==1.7.10",
]

[project.urls]
homepage = "https://github.com/yourusername/pennerbot"
repository = "https://github.com/yourusername/pennerbot"
documentation = "https://github.com/yourusername/pennerbot/blob/main/README.md"

[project.scripts]
pennerbot-server = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | web/node_modules
  | web/dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
skip_glob = ["venv/*", "web/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
exclude = [
    'venv',
    'web',
    'build',
    'dist',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]